[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/ScorePanel.gd" type="Script" id=1]
[ext_resource path="res://fonts/pause_subtitle_font.tres" type="DynamicFont" id=2]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 10.0
content_margin_right = 10.0
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=2]
content_margin_left = 10.0
content_margin_right = 10.0
bg_color = Color( 0, 0, 0, 1 )

[node name="ScorePanel" type="Control"]
margin_right = 190.0
margin_bottom = 368.0
script = ExtResource( 1 )

[node name="ScoreVBox" type="VBoxContainer" parent="."]
anchor_right = 1.0
rect_min_size = Vector2( 0, 100 )

[node name="ScoreContainer" type="PanelContainer" parent="ScoreVBox"]
margin_right = 190.0
margin_bottom = 31.0
rect_min_size = Vector2( 0, 31 )
custom_styles/panel = SubResource( 1 )

[node name="ScoreTitle" type="Label" parent="ScoreVBox/ScoreContainer"]
margin_left = 10.0
margin_right = 180.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.776471, 0.901961, 0.00784314, 1 )
text = "SCORE:"

[node name="ScoreNumber" type="Label" parent="ScoreVBox/ScoreContainer"]
margin_left = 10.0
margin_right = 180.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.776471, 0.901961, 0.00784314, 1 )
text = "000000"
align = 2

[node name="LengthVBox" type="VBoxContainer" parent="."]
margin_top = 48.0
margin_right = 190.0
margin_bottom = 79.0

[node name="LengthContainer" type="PanelContainer" parent="LengthVBox"]
margin_right = 190.0
margin_bottom = 31.0
rect_min_size = Vector2( 0, 31 )
custom_styles/panel = SubResource( 2 )

[node name="LengthTitle" type="Label" parent="LengthVBox/LengthContainer"]
margin_left = 10.0
margin_right = 180.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.776471, 0.901961, 0.00784314, 1 )
text = "LENGTH:"

[node name="LengthNumber" type="Label" parent="LengthVBox/LengthContainer"]
margin_left = 10.0
margin_right = 180.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.776471, 0.901961, 0.00784314, 1 )
text = "000"
align = 2
